--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -29,18 +29,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1a)\n",
+    "## a)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## task 1a)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "We have been given the cross-entropy loss function:\n",
+    "\n",
+    "$C_n(w) = -[y_n \\log(\\hat{y}_n) + (1 - y_n) \\log(1 - \\hat{y}_n)]$\n",
+    "\n",
+    "We also have the output of our network, $\\hat{y}_n = f(x)$, where $f(x)$ is the sigmoid function:\n",
+    "$f(x) = \\frac{1}{1 + e^{-z_n}} $ , where \n",
+    "\n",
+    "$z_n = w^Tx_n$\n",
+    "\n",
+    "We want to find $\\frac{\\partial C_n(w)}{\\partial w_i}$\n",
+    "\n",
+    "<br>\n",
+    "Using the chain rule, we have:\n",
+    "\n",
+    "$\\frac{\\partial C_n(w)}{\\partial w_i} = \\frac{\\partial C_n}{\\partial \\hat{y}_n} \\cdot \\frac{\\partial \\hat{y}_n}{\\partial z_n} \\cdot \\frac{\\partial z_n}{\\partial w_i}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "First part:\n",
+    "$\\frac{\\partial C_n}{\\partial \\hat{y}_n} = -\\frac{y_n}{\\hat{y}_n} + \\frac{1 - y_n}{1 - \\hat{y}_n}$\n",
+    "\n",
+    "Second part:\n",
+    "$\\frac{\\partial \\hat{y}_n}{\\partial z_n} = \\frac{1}{1 + e^{-z_n}} \\cdot (1 - \\frac{1}{1 + e^{-z_n}}) = \\hat{y}_n \\cdot (1 - \\hat{y}_n) $\n",
+    "\n",
+    "Third part:\n",
+    "$\\frac{\\partial z_n}{\\partial w_i} = x_{n}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Substitute these results back into the chain rule formula:\n",
+    "\n",
+    "$\\frac{\\partial C_n(w)}{\\partial w_i} = -\\left(\\frac{y_n}{\\hat{y}_n} - \\frac{1 - y_n}{1 - \\hat{y}_n}\\right) \\cdot \\hat{y}_n \\cdot (1 - \\hat{y}_n) \\cdot x_{n}$\n",
+    "\n",
+    "$\\frac{\\partial C_n(w)}{\\partial w_i} = (-y_n + y_n \\cdot \\hat{y}_n + \\hat{y}_n - y_n \\cdot \\hat{y}_n) \\cdot x_n $\n",
+    "\n",
+    "$\\frac{\\partial C_n(w)}{\\partial w_i} = - (y_n - \\hat{y}_n) \\cdot x_{n}$"
    ]
   },
   {
