Done with task 3 and started on task 4

--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "source": [
     "## Task 2b)\n",
-    "![](task2b_binary_train_loss.png)"
+    "<img src=\"../task2b_binary_train_loss.png\">"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "## Task 2c)\n",
-    "![](task2b_binary_train_accuracy.png)"
+    "<img src=\"../task2b_binary_train_accuracy.png\">"
    ]
   },
   {
@@ -99,7 +99,8 @@
    "metadata": {},
    "source": [
     "## Task 2d)\n",
-    "FILL IN ANSWER"
+    "FILL IN ANSWER\n",
+    "Rart at de sier vi skal øke epochs til 500 når vår stopper på 34 elller hva det var når standard er 50..."
    ]
   },
   {
@@ -107,8 +108,10 @@
    "metadata": {},
    "source": [
     "## Task 2e)\n",
-    "FILL IN ANSWER\n",
-    "![](task2e_train_accuracy_shuffle_difference.png)"
+    "FILL IN ANSWER!!!\n",
+    "\n",
+    "\n",
+    "<img src=\"../task2e_train_accuracy_shuffle_difference.png\">"
    ]
   },
   {
@@ -123,7 +126,7 @@
    "metadata": {},
    "source": [
     "## Task 3b)\n",
-    "![](task3b_softmax_train_loss.png)"
+    "<img src=\"../task3b_softmax_train_loss.png\">"
    ]
   },
   {
@@ -131,7 +134,7 @@
    "metadata": {},
    "source": [
     "## Task 3c)\n",
-    "![](task3b_softmax_train_accuracy.png)"
+    "<img src=\"../task3b_softmax_train_accuracy.png\">"
    ]
   },
   {
@@ -139,7 +142,7 @@
    "metadata": {},
    "source": [
     "## Task 3d)\n",
-    "FILL IN ANSWER"
+    "Yes, there are clear signs of overfitting. From the plot of the training and validation accuracy we can see that the training accuracy is higher than the validation accuracy. They differ from each other, escpecially after 3000 training steps. Training accuracy is 92,3 % while the validation accuracy is at 91,6%. Because the training accuracy is higher than the validation accuracy, the model might be memorizing the training data rather than making it generalizable to new data."
    ]
   },
   {
@@ -155,7 +158,18 @@
    "source": [
     "## Task 4a)\n",
     "\n",
-    "Fill in image of hand-written notes which are easy to read, or latex equations here"
+    "Fill in image of hand-written notes which are easy to read, or latex equations here\n",
+    "\n",
+    "Det under er ikke riktig!!!!!!!\n",
+    "\n",
+    " Virker som at de vil ha hele utledingen, men det gikk litt i ball for meg. Så for å gå videre sa jeg at første delen har vi fått og regnet ut den partiell deriverte av regularizeringsutrykket. Så svaret skal være det jeg har, men har ikke hele utledingen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../4a.png\">"
    ]
   },
   {
