--- a/assignment3/AssignmentReport-Group1.ipynb
+++ b/assignment3/AssignmentReport-Group1.ipynb
@@ -11,17 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an outline for your report to ease the amount of work required to create your report. Jupyter notebook supports markdown, and I recommend you to check out this [cheat sheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet). If you are not familiar with markdown.\n",
-    "\n",
-    "Before delivery, **remember to convert this file to PDF**. You can do it in two ways:\n",
-    "1. Print the webpage (ctrl+P or cmd+P)\n",
-    "2. Export with latex. This is somewhat more difficult, but you'll get somehwat of a \"prettier\" PDF. Go to File -> Download as -> PDF via LaTeX. You might have to install nbconvert and pandoc through conda; `conda install nbconvert pandoc`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Task 1"
    ]
   },
@@ -146,8 +135,14 @@
     "# Task 2\n",
     "\n",
     "### Task 2a)\n",
+    "<img src=\"plots/task2.png\">\n",
     "\n",
-    "### Task 2b)"
+    "\n",
+    "### Task 2b)\n",
+    "<img src=\"task2_accuracy.png\">\n",
+    "Training accuracy: 0.878<br>\n",
+    "Validation accuracy: 0.730<br>\n",
+    "Test accuracy: 0.7342"
    ]
   },
   {
@@ -162,10 +157,45 @@
    "metadata": {},
    "source": [
     "### Task 3a)\n",
+    "| Layer | Layer Type        | Number of Hidden Units / Number of Filters | Activation Function |\n",
+    "|-------|-------------------|-------------------------------------------|----------------------|\n",
+    "| 1     | Conv2D            | 32                                        | ReLU                 |\n",
+    "| 1     | MaxPool2D         | –                                         | –                    |\n",
+    "| 2     | Conv2D            | 128                                       | ReLU                 |\n",
+    "| 2     | MaxPool2D         | –                                         | –                    |\n",
+    "| 3     | Conv2D            | 256                                       | ReLU                 |\n",
+    "| 3     | MaxPool2D         | –                                         | –                    |\n",
+    "| Flatten | –               | –                                         | –                    |\n",
+    "| 4     | Fully-Connected   | 128                                       | ReLU                 |\n",
+    "| 5     | Fully-Connected   | 10                                        | Softmax              |\n",
+    "\n",
+    "For all convolutional layers:<br>\n",
+    "Stride=1<br>\n",
+    "Padding=2<br>\n",
+    "\n",
+    "Kernel for layer 1= 3x3<br>\n",
+    "Kernel for layer 2= 4x4<br>\n",
+    "Kernel for layer 3= 5x5<br>\n",
+    "\n",
+    "Optimizer: sgd<br>\n",
+    "Regularization: None<br>\n",
+    "Learning rate: 0.05<br>\n",
+    "Batch size: 64<br>\n",
+    "Weight init: None<br>\n",
+    "Data augmentation: Used transforms.Lambda(random_rotate_images) and transforms.Lambda(random_color_jitter)<br>\n",
+    "Added batch normalization after every convolutional layer<br>\n",
+    "Early stopping: 4 epochs\n",
     "### Task 3b)\n",
+    "<img src=\"plots/task3.png\">\n",
+    "\n",
+    "<img src=\"task3_accuracy.png\">\n",
+    "\n",
     "### Task 3c)\n",
+    "\n",
     "### Task 3d)\n",
+    "\n",
     "### Task 3e)\n",
+    "\n",
     "### Task 3f)"
    ]
   },
@@ -180,25 +210,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4a)\n",
+    "Optimizer: adam<br>\n",
+    "Batch size: 32 <br>\n",
+    "Learning rate: 5*10^-4<br>\n",
+    "Data augmentation: Resize til (112,112) <br>\n",
     "\n",
-    "FILL IN ANSWER. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task 4b)\n",
-    "FILL IN ANSWER\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task 4c)\n",
-    "FILL IN ANSWER"
+    "<img src=\"plots/task4.png\">\n",
+    "\n",
+    "<img src=\"task4_accuracy.png\">"
    ]
   }
  ],
